# womentechglobal_demo

./: .env-demo  .gitignore  Makefile  README.md  README.rst  pyproject.toml  recipes.txt
mantium-backend/: Makefile  pyproject.toml  requirements.txt
mantium-backend/app/: api.py  ingredient_list.py  load_env.py  main.py  run_prompt.py  schemas.py
mantium-backend/tests/: test_womentechglobal_demo.py
mantium-frontend/: package-lock.json  package.json
mantium-frontend/public/: index.html
mantium-frontend/src/: App.js  index.css
mantium-frontend/src/components/: About.js  AddIngredient.js  Button.js  Footer.js  Header.js  Ingredient.js  Ingredients.js  TextBox.js
